c2rust-transpile/tests/snapshots/snapshots__transpile-linux@rotate.c.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/os-specific/rotate.linux.rs
input_file: c2rust-transpile/tests/snapshots/os-specific/rotate.c
---
#![allow(
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    path_statements,
    unsafe_op_in_unsafe_fn,
    unused_assignments,
    unused_mut,
    unused_unsafe,
    unused_variables
)]
use core::ffi;
#[unsafe(no_mangle)]
pub unsafe extern "C" fn rotate_left_64(mut x: ffi::c_ulonglong) -> ffi::c_ulonglong {
    return (x as ffi::c_ulong).rotate_left(4 as ffi::c_int as ffi::c_ulong as u32)
        as ffi::c_ulonglong;
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn rotate_right_64(mut x: ffi::c_ulonglong) -> ffi::c_ulonglong {
    return (x as ffi::c_ulong).rotate_right(4 as ffi::c_int as ffi::c_ulong as u32)
        as ffi::c_ulonglong;
}
