c2rust-transpile/tests/snapshots/snapshots__transpile@atomics.c.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/atomics.rs
input_file: c2rust-transpile/tests/snapshots/atomics.c
---
#![allow(
    dead_code,
    mutable_transmutes,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    path_statements,
    unsafe_op_in_unsafe_fn,
    unused_assignments,
    unused_mut,
    unused_unsafe,
    unused_variables
)]
#![feature(core_intrinsics)]
use core::ffi;
#[unsafe(no_mangle)]
pub unsafe extern "C" fn c11_atomics(mut x: ffi::c_int) -> ffi::c_int {
    *&raw mut x = 0 as ffi::c_int;
    ::core::intrinsics::atomic_store_seqcst(&raw mut x, 1 as ffi::c_int);
    ::core::intrinsics::atomic_load_seqcst(&raw mut x);
    ::core::intrinsics::atomic_xadd_seqcst(&raw mut x, 2 as ffi::c_int);
    ::core::intrinsics::atomic_xsub_seqcst(&raw mut x, 1 as ffi::c_int);
    ::core::intrinsics::atomic_and_seqcst(&raw mut x, 0xf as ffi::c_int);
    ::core::intrinsics::atomic_or_seqcst(&raw mut x, 0x10 as ffi::c_int);
    ::core::intrinsics::atomic_nand_seqcst(&raw mut x, 0xff as ffi::c_int);
    ::core::intrinsics::atomic_xchg_seqcst(&raw mut x, 42 as ffi::c_int);
    let mut expected: ffi::c_int = 42 as ffi::c_int;
    let mut desired: ffi::c_int = 100 as ffi::c_int;
    let fresh0 =
        ::core::intrinsics::atomic_cxchg_seqcst_seqcst(&raw mut x, *&raw mut expected, desired);
    *&raw mut expected = fresh0.0;
    fresh0.1;
    expected = 100 as ffi::c_int;
    desired = 200 as ffi::c_int;
    let fresh1 =
        ::core::intrinsics::atomic_cxchgweak_seqcst_seqcst(&raw mut x, *&raw mut expected, desired);
    *&raw mut expected = fresh1.0;
    fresh1.1;
    return x;
}
pub const __ATOMIC_SEQ_CST: ffi::c_int = unsafe { 5 as ffi::c_int };
