c2rust-transpile/tests/snapshots/snapshots__transpile@gotos.c.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/gotos.rs
input_file: c2rust-transpile/tests/snapshots/gotos.c
---
#![allow(
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    path_statements,
    unsafe_op_in_unsafe_fn,
    unused_assignments,
    unused_mut,
    unused_unsafe,
    unused_variables
)]
use core::ffi;
#[unsafe(no_mangle)]
pub unsafe extern "C" fn sum(mut count: ffi::c_int) -> ffi::c_int {
    let mut x: ffi::c_int = 0 as ffi::c_int;
    while !(count <= 0 as ffi::c_int) {
        x += count;
        count -= 1;
    }
    return x;
}
